<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="calibrattion_text" translatable="false">press cross</string>
    <string name="button_text_navi" translatable="false">Navi</string>
    <string name="button_text_bt">Bluetooth</string>
    <string name="button_text_bt_music" translatable="false">BT Music</string>
    <string name="button_text_radio">Radio</string>
    <string name="button_text_dvd" translatable="false">DVD</string>
    <string name="button_text_tv" translatable="false">TV</string>
    <string name="button_text_aux">AUXIN</string>
    <string name="volume_level" translatable="false">Volume</string>
    <string name="button_text_music">Music</string>
    <string name="button_text_video" translatable="false">Video</string>
    <string name="key_not_support" translatable="false">This device do not support this key!</string>
    <string name="LO" translatable="false">LO</string>
    <string name="HI" translatable="false">HI</string>
    <string name="temp_unic" translatable="false">°C</string>
    <string name="text_reverse_warning" translatable="false">Warning</string>
    <string name="temp_unic_centigrade" translatable="false">°C</string>
    <string name="temp_unic_fahrenheit" translatable="false">F</string>
    <string name="outdoor_temp" translatable="false">Temperature Outside:</string>
    <string name="shut_down" translatable="false">shutting down!</string>
    <string name="f_camera" translatable="false">F-Camera</string>
    <string name="on" translatable="false">ON</string>
    <string name="off" translatable="false">OFF</string>
    <string name="debug_clear" translatable="false">Clear</string>
    <string name="debug_pause" translatable="false">Pause</string>
    <string name="debug_start" translatable="false">Start</string>
    <string name="debug_switch" translatable="false">Switch</string>
    <string name="debug_export" translatable="false">Export</string>
    <string name="debug_quit" translatable="false">Quit</string>
    <string name="disconnect_video" translatable="false">No Signal!</string>
    <string name="warn0_1" translatable="false">Transmission ouertemper ature Stop safely</string>
    <string name="warn0_2" translatable="false">Transmission malfunction Seruice now</string>
    <string name="warn0_3" translatable="false">Engine malfunction Seruice now</string>
    <string name="warn0_4" translatable="false">Dlesel filter ouerloaded Refer to manual</string>
    <string name="warn0_5" translatable="false">Engine oil change due Seruice required</string>
    <string name="warn0_6" translatable="false">Engine oil pressure low Stop safely</string>
    <string name="warn0_7">Hill start assist not available</string>
    <string name="warn1_0">Airbag malfunction Seruice now</string>
    <string name="warn1_1">Brake system malfunction Stop safely</string>
    <string name="warn1_2">Brake fluid leuel low Seruice now</string>
    <string name="warn1_3">ABS malfunction Seruice now</string>
    <string name="warn1_4">OFF ESP OFF</string>
    <string name="warn1_5">OFF ESP malfunction Next service</string>
    <string name="warn1_6">Power steering malfunction Service now</string>
    <string name="warn2_0">Boot open</string>
    <string name="warn2_1">Bonnet open</string>
    <string name="warn2_2">Passenger side rear door open</string>
    <string name="warn2_3">Drlver slde rear door open</string>
    <string name="warn2_4">Passenger door open</string>
    <string name="warn2_5">Driver door open</string>
    <string name="warn2_7">Auto StartStop Engine starting</string>
    <string name="warn3_0">Left indicator malfunction Change bulb</string>
    <string name="warn3_1">Right indicator malfunction Change bulb</string>
    <string name="warn3_2">Bonnet open</string>
    <string name="warn3_3">Boot open</string>
    <string name="warn3_4">Passenger side rear door open</string>
    <string name="warn3_5">Driver side rear door open</string>
    <string name="warn3_6">Passenger door open</string>
    <string name="warn3_7">Driver door open</string>
    <string name="warn4_0">Press clutch to start</string>
    <string name="warn4_1">Press brake to start</string>
    <string name="warn4_2">Key Battery low Replace battery</string>
    <string name="warn4_3">Auto startStop press a pedal to start engine</string>
    <string name="warn4_4">Alarm system malfunction Service required</string>
    <string name="warn4_5">Key Battery low replace battery</string>
    <string name="warn4_6">lnterior scan deactivated</string>
    <string name="warn4_7">Auto wiper/lights malfunctioa Service required</string>
    <string name="warn5_0">Auto StartStop Manual start required</string>
    <string name="warn5_1">Close boot or use spare key</string>
    <string name="warn5_2">Steering lock engaged Turn steering wheel</string>
    <string name="warn5_3">Steering lock malfunction Stop safely</string>
    <string name="warn5_4">Steering lock malfunction Service now</string>
    <string name="warn5_5">Key outside car</string>
    <string name="warn5_6">Key not detected</string>
    <string name="warn5_7">Turn ignition off Use POWER button</string>
    <string name="warn6_0">Door open Apply brake</string>
    <string name="warn6_1">Select N to start</string>
    <string name="warn6_2">Press brake to start</string>
    <string name="warn6_3">Auto StartStop Select neutral</string>
    <string name="warn6_4">Select N or P to start</string>
    <string name="warn6_5">Vehicle not in Park Select P</string>
    <string name="warn6_6">Auto StartStop Switch ignition off</string>
    <string name="warn6_7">lmmobiliser malfunction Service now</string>
    <string name="warn7_0">Alarm triggered Check vehicle</string>
    <string name="warn7_1">Alarm triggered Check vehicle</string>
    <string name="warn7_2">Alarm triggered Check vehicle</string>
    <string name="warn7_3">Alarm triggered Check vehicle</string>
    <string name="warn7_4">Transmission hot Stop or speed up</string>
    <string name="warn7_5">Transmission hot Stop or speed up</string>
    <string name="warn7_6">Transmission ready</string>
    <string name="warn7_7">Transmission hot wait 4 mins</string>
    <string name="warn8_0">Press brake and clutch to start</string>
    <string name="warn8_1">Press brake to start</string>
    <string name="warn8_2">Prsee clutch to start</string>
    <string name="warn8_3">Active City Stop Auto braking</string>
    <string name="warn8_4">Active City Stop not available</string>
    <string name="warn8_5">Active City Stop Sensor blocked Clean screen</string>
    <string name="warn8_6">Check tyre pressures</string>
    <string name="warn8_7">Tyre pressure sys malfunction Service required</string>
    <string name="warn9_0">Engine running</string>
    <string name="warn9_1">MyKey active Drive safely</string>
    <string name="warn9_2">MyKey Speed limited to 160 km/h</string>
    <string name="warn9_3">MyKey Vehicle at top speed</string>
    <string name="warn10_0">MyKey Check speed Drive safely</string>
    <string name="warn11_0">MyKey Park ald cannot be deactivated</string>
    <string name="warn11_1">MyKey ESC cannot be deactivated</string>
    <string name="warn12_0">Press brake to unlock selector lever</string>
    <string name="warn12_1">Cranking time exceeded</string>
    <string name="warn13_3">Check tire pressure</string>
    <string name="warn13_6">Transmission not in Park</string>
    <string name="warn13_7">Selector lever unlocked</string>
    <string name="warn14_0">Park brake applied</string>
    <string name="warn15_5">MyKey Vehicle near top speed</string>
    <string name="warn15_7">Selector lever unlocked</string>
    <string name="warning_driving">"This Application is disabled for your safety!Please park the car for using it."</string>
    <string name="park_info0" />
    <string name="park_info1" />
    <string name="park_info2">From the right of the search parking position</string>
    <string name="park_info3">From the right of the search parking position</string>
    <string name="park_info4">From the right of the search parking position</string>
    <string name="park_info5">Search parking position from the left</string>
    <string name="park_info6">Search parking position from the left</string>
    <string name="park_info7">"The left found parking position 
 move on, ready parking"</string>
    <string name="park_info8">"The right of discovery parking position 
 move on, ready parking"</string>
    <string name="park_info9">"The left found parking position 
 move on, ready parking"</string>
    <string name="park_info10">"The right of discovery parking position 
 move on, ready parking"</string>
    <string name="park_info11">"The left found parking position 
 parking, ready to start parking"</string>
    <string name="park_info12">"The right of discovery parking position 
 parking, ready to start parking"</string>
    <string name="park_info13">"Keep hands off the steering wheel 
 shift to R gear, ready to stop the left"</string>
    <string name="park_info14">"Keep hands off the steering wheel 
 shift to R gear, ready right side parking"</string>
    <string name="park_info15">"Remember to check the vehicle for safe surroundings 
 positive Wang Zuoce parking 
 Please hang the R range, slow retreat"</string>
    <string name="park_info16">"Remember to check the vehicle for safe surroundings 
 positive Wang Youce parking 
 Please hang the R range, slow retreat"</string>
    <string name="park_info17">"Remember to check the vehicle for safe surroundings 
 positive Wang Zuoce parking 
 Please hang the R range, slow retreat"</string>
    <string name="park_info18">"Remember to check the vehicle for safe surroundings 
 positive Wang Youce parking 
 Please hang the R range, slow retreat"</string>
    <string name="park_info19">"Remember to check the vehicle for safe surroundings 
 parking 
 Please hang forward gears, slow forward"</string>
    <string name="park_info20">"Remember to check the vehicle for safe surroundings 
 parking 
 Please hang forward gears, slow forward"</string>
    <string name="park_info21">"Remember to check for security around the vehicle environment 
 careful 
 Please hang forward gears, slow forward"</string>
    <string name="park_info22">"Remember to check for security around the vehicle environment 
 careful 
 Please hang forward gears, slow forward"</string>
    <string name="park_info23">"Remember to check the vehicle for safe surroundings 
 parking 
 Please hang the R range, slow retreat"</string>
    <string name="park_info24">"Remember to check the vehicle for safe surroundings 
 parking 
 Please hang the R range, slow retreat"</string>
    <string name="park_info25">"Remember to check for security around the vehicle environment 
 careful 
 Please hang R range, slow retreat"</string>
    <string name="park_info26">"Remember to check for security around the vehicle environment 
 careful 
 Please hang R range, slow retreat"</string>
    <string name="park_info27">"Remember to check for security around the vehicle environment 
 careful 
 Please hang R range, slow retreat"</string>
    <string name="park_info28">From the right of the search parking position</string>
    <string name="park_info29">From the right of the search parking position</string>
    <string name="park_info30">From the right of the search parking position</string>
    <string name="park_info31">From the right of the search parking position</string>
    <string name="start">Start</string>
    <string name="can37info_07">Press \"△▽\" to set parking position</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="camera_heigt">camera height</string>
    <string name="left_right">left right</string>
    <string name="up_down">up down</string>
    <string name="width">width</string>
    <string name="add">+</string>
    <string name="minus">-</string>
</resources>