<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_canbus_nissian"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:visibility="visible">

    <LinearLayout
        android:id="@+id/border_bg"
        android:layout_width="625.0px"
        android:layout_height="55.0px"
        android:layout_marginLeft="1.0px"
        android:background="@drawable/can37_border"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible">

        <ImageView
            android:id="@+id/state"
            android:layout_width="60.0px"
            android:layout_height="60.0px"
            android:layout_marginStart="5.0px"
            android:scaleType="fitXY"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txt_info"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/can37info_07"
            android:textColor="#ffffffff"
            android:textSize="26.0px"
            android:visibility="visible" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_up"
        android:layout_width="127.0px"
        android:layout_height="61.0px"
        android:layout_gravity="center|left"
        android:layout_marginLeft="245.0px"
        android:layout_marginBottom="100.0px"
        android:background="@drawable/btn_can37_btn_up"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn1"
            android:layout_width="104.0px"
            android:layout_height="178.0px"
            android:layout_marginStart="5.0px"
            android:background="@drawable/btn_can37_btn1"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/btn_left"
            android:layout_width="127.0px"
            android:layout_height="61.0px"
            android:layout_marginStart="22.0px"
            android:background="@drawable/btn_can37_btn_left"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/btn_middle"
            android:layout_width="61.0px"
            android:layout_height="61.0px"
            android:layout_marginStart="22.0px"
            android:background="@drawable/can37_middle"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/btn_right"
            android:layout_width="127.0px"
            android:layout_height="61.0px"
            android:layout_marginStart="22.0px"
            android:background="@drawable/btn_can37_btn_right"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/btn2"
            android:layout_width="104.0px"
            android:layout_height="178.0px"
            android:layout_marginStart="22.0px"
            android:background="@drawable/btn_can37_btn2"
            android:visibility="visible" />

        <View
            android:layout_width="0.0px"
            android:layout_height="0.0px"
            android:layout_weight="1.0" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_down"
        android:layout_width="127.0px"
        android:layout_height="61.0px"
        android:layout_gravity="center|left"
        android:layout_marginLeft="245.0px"
        android:layout_marginTop="100.0px"
        android:background="@drawable/btn_can37_btn_down"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="84.0px"
        android:layout_gravity="bottom"
        android:layout_marginBottom="5.0px"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/camera"
            android:layout_width="60.0px"
            android:layout_height="74.0px"
            android:layout_marginStart="30.0px"
            android:visibility="visible" />

        <Button
            android:id="@+id/canceal"
            android:layout_width="160.0px"
            android:layout_height="75.0px"
            android:layout_marginStart="15.0px"
            android:background="@drawable/btn_can37_btn_bg"
            android:singleLine="true"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#ffffffff"
            android:textSize="34.0px"
            android:visibility="visible" />

        <Button
            android:id="@+id/start"
            android:layout_width="160.0px"
            android:layout_height="75.0px"
            android:layout_marginStart="10.0px"
            android:background="@drawable/btn_can37_btn_bg"
            android:singleLine="true"
            android:text="@string/start"
            android:textColor="#ffffffff"
            android:textSize="34.0px"
            android:visibility="visible" />

        <Button
            android:id="@+id/back1"
            android:layout_width="160.0px"
            android:layout_height="75.0px"
            android:layout_marginStart="10.0px"
            android:background="@drawable/btn_can37_btn_bg"
            android:singleLine="true"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textColor="#ffffffff"
            android:textSize="34.0px"
            android:visibility="visible" />

        <Button
            android:id="@+id/vertical1"
            android:layout_width="160.0px"
            android:layout_height="75.0px"
            android:layout_marginStart="10.0px"
            android:background="@drawable/btn_can37_vertical"
            android:visibility="gone" />

        <Button
            android:id="@+id/lateral"
            android:layout_width="160.0px"
            android:layout_height="75.0px"
            android:layout_marginStart="10.0px"
            android:background="@drawable/btn_can37_lateral"
            android:visibility="gone" />

        <Button
            android:id="@+id/imgpa"
            android:layout_width="160.0px"
            android:layout_height="75.0px"
            android:layout_marginStart="10.0px"
            android:background="@drawable/btn_can37_imgpa"
            android:visibility="gone" />

        <View
            android:layout_width="0.0px"
            android:layout_height="0.0px"
            android:layout_weight="1.0" />

        <Button
            android:id="@+id/triangle"
            android:layout_width="160.0px"
            android:layout_height="75.0px"
            android:layout_marginStart="10.0px"
            android:layout_marginEnd="110.0px"
            android:background="@drawable/btn_can37_triangle"
            android:visibility="visible" />
    </LinearLayout>

</FrameLayout>